add semantic deobfuscation and latest client artifacts